Com imagens de manutenção

--- a/app/views/landing_page/home.html.erb
+++ b/app/views/landing_page/home.html.erb
@@ -1,10 +1,9 @@
-<h1> OI</h1>
-
 <body>
 
 <div style="height:100%">
-<div class="topdiv"><%= image_tag "logo_azul.svg" , :width => '150' , :class => 'svgClass' %></div>
-<div class="bottomdiv">bottom div</div>
+<div class="topdiv"><%= image_tag "logo_azul.svg" , :width => '300'%>
+</div>
+<div class="bottomdiv"><%= image_tag "manutecao.jpg" , :width => '425'%></div>
 
 </div>
 </body>
