--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -1,3 +1,7 @@
 body {margin:0;padding:0;height:100%;}
-div.topdiv {position:fixed;top:0;height:50%;width:100%;background-color:#003366;color:#FFFFFF;font-size:16px;text-align:center;}
-div.bottomdiv {position:fixed;bottom:0;height:50%;width:100%;background-color:white;color:#FFFFFF;font-size:16px;text-align:center;}
+
+div.topdiv {position:fixed;top:0;height:50%;width:100%;
+	background-color:#003366;color:#FFFFFF;font-size:16px;text-align:center;}
+
+div.bottomdiv {position:fixed;bottom:0;height:50%;width:100%;
+	background-color:white;font-size:16px;text-align:center;}
